<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Intorduced in FR 1  -->
    <string name="app_name">Team3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="normal">Normal</string>
    <string name="sattelite">Satellite</string>
    <string name="hybrid">Hybrid</string>
    <string name="none">None</string>
    <string name="terrain">Terrain</string>
    <string name="current_location">Current Location</string>
    <string name="title_activity_check_in">Add a Review</string>
    <string name="title_activity_reviews">List of Reviews</string>
    <string name="add_picture_text">Add a Picture:</string>
    <string name="browse_picture_button">Browse</string>
    <string name="rate_location_text">Rate the location:</string>
    <string name="add_comment_text">Add a Comment:</string>
    <string name="save_review_button">Save Review</string>
    <string name="checkin_button">Check in on my Current Location</string>
    <string name="title_user_login">Log in</string>
    <string name="main_activity">Main Activity</string>
    <string name="title_activity_places">Places</string>
    <string name="show_none">None</string>
    <string name="map_hybrid">Hybrid</string>
    <string name="map_terrain">Terrain</string>
    <string name="map_satellite">Satellite</string>
    <string name="map_normal">Normal</string>

    
    <string name="str_btn_find">Find</string>
    <string name="menu_settings">Settings</string>
    <!--GOOGLE PLACES Introduced in FR 3 -->
    <string-array name="place_type">
        <item>airport</item>
        <item>atm</item>
        <item>bank</item>
        <item>bus_station</item>
        <item>church</item>
        <item>doctor</item>
        <item>hospital</item>
        <item>mosque</item>
        <item>movie_theater</item>
        <item>hindu_temple</item>
        <item>restaurant</item>
    </string-array>
 
    <string-array name="place_type_name">
        <item>Airport</item>
        <item>ATM</item>
        <item>Bank</item>
        <item>Bus Station</item>
        <item>Church</item>
        <item>Doctor</item>
        <item>Hospital</item>
        <item>Mosque</item>
        <item>Movie Theater</item>
        <item>Hindu Temple</item>
        <item>Restaurant</item>
    </string-array>
        <!-- Intoduced in FR 4 -->
    <string name="user_name">User Name:</string>
    <string name="user_name_hint">E.g. Niaris</string>
    <string name="about_me">About Me:</string>
    <string name="about_me_hint">E.g. I like travelling</string>
    <string name="google_plus_account">Google+:</string>
    <string name="google_plus_account_hint">E.g. name@mail.com</string>
    <string name="whats_app_account">WhatsApp:</string>
    <string name="whats_app_account_hint">E.g. Niaris</string>
    <string name="button_save_user_profile">Save</string>
    <string name="activity_user_profile">User Profile</string>
    <string name="your_email">Your email:</string>
    <string name="button_edit_details">Edit Details</string>
    <string name="btn_cancel_edit_details">Cancel</string>
    <string name="your_profile">Your Profile</string>
    <string name="hide_all">Hide All</string>
    <string name="show_all">Show All</string>
    <string name="suggested_places">Suggested Places</string>
    <string name="welcome_text">Studying abroad? Visiting new places? You are not familiar with the places around you and you need some suggestions? Then this application is for you. Please sign in to continue</string>
    
    
    

</resources>
