<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    
     <item
        android:id="@+id/mapTypeNormal"
        android:title="@string/map_normal"/>
    <item
        android:id="@+id/mapTypeSatellite"
        android:title="@string/map_satellite"/>
    <item
        android:id="@+id/mapTypeTerrain"
        android:title="@string/map_terrain"/>
    <item
        android:id="@+id/mapTypeHybrid"
        android:title="@string/map_hybrid"/>
    <item
        android:id="@+id/mapTypeNone"
        android:title="@string/show_none"/>

     <item
        android:id="@+id/gotoCurrentLocation"
        android:showAsAction="always"
        android:title="@string/current_location"/>
     
     
     <!-- Indtorduced in FR 3 -->
     <item
        android:id="@+id/googlePlaces"
        android:showAsAction="always"
        android:title="@string/suggested_places" >
        <menu>
            <item         
                android:id="@+id/showAllSuggestions"
                android:title="@string/show_all" />
            
            <item         
                android:id="@+id/showNoSuggestions"
                android:title="@string/hide_all" />   
        </menu>
         
         </item>
         
     <!-- Introduced in FR 4 -->
     
     <item 
         android:id="@+id/UserProfileDetails"
         android:showAsAction="never"
         android:title="@string/your_profile">
         
     </item>
</menu>
