<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="84dp"
        android:text="@string/user_name" />

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvUserName"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/user_name_hint" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/etUserName"
        android:layout_marginLeft="16dp"
        android:text="@string/about_me" />

    <EditText
        android:id="@+id/etAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvAboutMe"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/about_me_hint"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAboutMe"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/tvUserName"
        android:onClick="saveUserProfile"
        android:text="@string/button_save_user_profile" />

    <TextView
        android:id="@+id/tvEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tvUserName"
        android:layout_alignRight="@+id/tvAboutMe"
        android:layout_marginBottom="36dp"
        android:text="@string/google_plus_account" />

    <TextView
        android:id="@+id/tvShowEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvEmailAddress"
        android:layout_alignBottom="@+id/tvEmailAddress"
        android:layout_alignLeft="@+id/btSave"
        android:layout_marginLeft="24dp"
        android:text="" 
         />

    <Button
        android:id="@+id/btCancelEditDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btSave"
        android:layout_alignBottom="@+id/btSave"
        android:layout_marginLeft="29dp"
        android:layout_toRightOf="@+id/btSave"
        android:text="@string/btn_cancel_edit_details" />

    <TextView
        android:id="@+id/tvUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvEmailAddress"
        android:layout_below="@+id/etAboutMe"
        android:text="174" />

</RelativeLayout>